pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__154-html_blocks.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/154-html_blocks.md
---
[32m<div id="foo" class="bar
[0m[32m  baz">
[0m[32m</div>
[0m
